INSERÇÃO DE RESPONSIVIDADE

--- a/Content/footercss.css
+++ b/Content/footercss.css
@@ -7,9 +7,10 @@
         color: #ffd800
     }
 
+
  #footer1{
      background: #8b0909;
  }
 #footer2 {
-    background: #4d0303
+    background: #4d0303;
 }
