--- a/Site1.Master
+++ b/Site1.Master
@@ -24,7 +24,7 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body class="bg-dark">
+<body class="bg-image" style="background-image: url('fundo.jpg'); height: 1vh; ">
     
     <form id="form1" runat="server">
     <div >
@@ -78,7 +78,7 @@
     <p>
 
     </p>
-    <div class="bg-dark">
+    <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
 
         </asp:ContentPlaceHolder>
