--- a/Site1.Master
+++ b/Site1.Master
@@ -9,7 +9,8 @@
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.6.0.min.js"></script>
-    <script src="https://use.fontawesome.com/9087af2bb5.js"></script>
+    <link href="Content/all.css" rel="stylesheet" />
+    <link href="Content/all.min.css" rel="stylesheet" />
 
 
 
@@ -51,18 +52,18 @@
                      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"> Avaliar
                         </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
-                    <li><a class="dropdown-item" href="#">Filmes</a></li>
-                    <li><a class="dropdown-item" href="#">Séries</a></li>
-                    <li><a class="dropdown-item" href="#">Livros</a></li>
+                    <li><a class="dropdown-item" href="Avaliacaofilmes">Filmes</a></li>
+                    <li><a class="dropdown-item" href="AvaliacaoSeries">Séries</a></li>
+                    <li><a class="dropdown-item" href="Avaliacaolivros">Livros</a></li>
                 </ul>
                 </li>
                 <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" id="navbarDropdown2" role="button" data-toggle="dropdown"> Ver Avaliações
                         </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Filmes</a></li>
-                    <li><a class="dropdown-item" href="#">Séries</a></li>
-                    <li><a class="dropdown-item" href="#">Livros</a></li>
+                    <li><a class="dropdown-item" href="MovieRating.aspx">Filmes</a></li>
+                    <li><a class="dropdown-item" href="SeriesRating.aspx">Séries</a></li>
+                    <li><a class="dropdown-item" href="BookRating.aspx">Livros</a></li>
                 </ul>
                 </li>
                 </ul>
@@ -88,20 +89,8 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                     <p>
-                        <asp:LinkButton class="footerlinks" ID="LinkButton1" runat="server">Página Inicial</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton2" runat="server" Visible="false">Registro de Livros</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton3" runat="server" Visible="false">Registro de Séries</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton5" runat="server" Visible="false">Registro de Filmes</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton6" runat="server" Visible="false">Avaliação de Livros</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton7" runat="server" Visible="false">Avaliação de Séries</asp:LinkButton>
-                        &nbsp;
-                        <asp:LinkButton class="footerlinks" ID="LinkButton8" runat="server" Visible="false">Avaliação de Filmes</asp:LinkButton>
-                        &nbsp;
+                        <asp:LinkButton class="footerlinks" ID="LinkButton1" runat="server">URating</asp:LinkButton>
+                       
 
                     </p>
                     </div>
