--- a/Site1.Master
+++ b/Site1.Master
@@ -66,10 +66,23 @@
                     <li><a class="dropdown-item" href="BookRating.aspx">Livros</a></li>
                 </ul>
                 </li>
+                     <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" id="navbarDropdown3" role="button" data-toggle="dropdown"> Cadastrar
+                        </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="CadastroFilmes.aspx">Filmes</a></li>
+                    <li><a class="dropdown-item" href="CadastroSeries.aspx">Séries</a></li>
+                    <li><a class="dropdown-item" href="CadastroLivros.aspx">Livros</a></li>
                 </ul>
+                </li>
+                </ul>
+
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server"> Sair </asp:LinkButton>
+                        <asp:LinkButton class="nav-link" ID="usercontrol" runat="server" href="UserControl.aspx"> Controle de Usuário </asp:LinkButton>
+                    </li>
+                    <li class="nav-item active">
+                        <asp:LinkButton class="nav-link" ID="Sair" runat="server"> Sair </asp:LinkButton>
                     </li>
                 </ul>
             </div>
