--- a/Site1.Master
+++ b/Site1.Master
@@ -87,6 +87,15 @@
                 </ul>
 
                 <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" id="gerenciaravaliacoes" runat="server" role="button" data-toggle="dropdown"> Gerenciamento de Cadastros
+                        </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="GerenciaCadfilmes.aspx">Filmes</a></li>
+                    <li><a class="dropdown-item" href="GerenciaCadseries.aspx">Séries</a></li>
+                    <li><a class="dropdown-item" href="GerenciaCadlivros.aspx">Livros</a></li>
+                </ul>
+                </li>
                     <li class="nav-item active">
                         <asp:LinkButton class="nav-link" ID="usercontrol" runat="server" href="UserControl.aspx"> Controle de Usuário </asp:LinkButton>
                     </li>
