--- a/Site1.Master
+++ b/Site1.Master
@@ -39,9 +39,16 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            
              
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <input id="buscar" type="text" runat="server" />
+                </li>
+                    <li class="nav-item active">
+                        <asp:Button ID="btnbuscar" runat="server" Text="Buscar" />
+                        </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="HomePage.aspx">  Home</a>
                 </li>
@@ -107,10 +114,10 @@
 
         </nav>
     </div>
-    <p>
 
-    </p>
+   
     <div>
+
         <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
 
         </asp:ContentPlaceHolder>
