inserção de solicitação de amizade

--- a/Site1.Master
+++ b/Site1.Master
@@ -94,6 +94,8 @@
                 </ul>
 
                 <ul class="navbar-nav">
+                    <asp:LinkButton class="btn btn-light mr-1" ID="LinkButton2" runat="server"><i class="fas fa-user-friends"></i></asp:LinkButton>
+                    <asp:Label ID="solicitacoes" runat="server" ForeColor="White" Text="(0)"></asp:Label>
                     <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" id="gerenciaravaliacoes" runat="server" role="button" data-toggle="dropdown"> Gerenciamento de Cadastros
                         </a>
@@ -105,6 +107,7 @@
                 </li>
                     <li class="nav-item active">
                         <asp:LinkButton class="nav-link" ID="usercontrol" runat="server" href="UserControl.aspx"> Controle de Usuário </asp:LinkButton>
+                        
                     </li>
                     <li class="nav-item active">
                         <asp:LinkButton class="nav-link" ID="Sair" runat="server"> Sair </asp:LinkButton>
