--- a/Site1.Master
+++ b/Site1.Master
@@ -52,8 +52,14 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="HomePage.aspx">  Home</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="Profile.aspx"> Perfil </a>
+                <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" id="perfil" role="button" data-toggle="dropdown"> Perfil
+                        </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
+                    <li><a class="dropdown-item" href="Profile.aspx">Seu Perfil</a></li>
+                    <li><a class="dropdown-item" href="Amigos.aspx">Amigos</a></li>
+                    <li><a class="dropdown-item" href="Myavaliation.aspx">Suas Avaliações</a></li>
+                </ul>
                 </li>
                 <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"> Avaliar
